2006-06-22  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/plaf/basic/BasicLabelUI.java
	(installKeyboardActions): Implemented,
	(uninstallKeyboardActions): Implemented,
	(propertyChange): Add handling for 'displayedMnemonic' and 'labelFor'
	properties.

2006-06-22  Robert Schuster  <robertschuster@fsfe.org>

	* javax/swing/JMenu.java:
	(removeAll): Added check for popupMenu not being null.

2006-06-22  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/JLabel.java
	(getText): Updated API docs,
	(setText): Corrected the check for an unchanged value, and the update 
	of the displayedMnemonicIndex.

2006-06-22  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/JLabel.java
	(setDisplayedMnemonic(int)): Fire property change event AFTER updating 
	field,
	(setDisplayedMnemonicIndex): Modified argument checking to handle case
	where label text is null.

2006-06-22  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/JLabel.java
	(setDisplayedMnemonic): Updated API docs,
	(getDisplayedMnemonic): Removed unnecessary type-cast,
	(setDisplayedMnemonicIndex): Removed unnecessary validation, 
	(getDisplayedMnemonicIndex): Updated API docs.

2006-06-21  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/DefaultListSelectionModel.java
	(getSelectionMode): Updated API docs,
	(setAnchorSelectionIndex): Added ListSelectionEvent generation,
	(addSelectionInterval): If mode is SINGLE_SELECTION, just call 
	setSelectionInterval(),
	(setSelectionInterval): Reimplemented SINGLE_SELECTION and 
	SINGLE_INTERVAL_SELECTION cases.

2006-06-21  Roman Kennke  <kennke@aicas.com>

	* javax/swing/text/AbstractDocument.java
	(BranchElement.numChildren): New field.
	(BranchElement.BranchElement): Initialize children array with
	one element (that's the least number of elements that makes sense).
	Initialize numChildren.
	(BranchElement.children): Use numChildren as boundary.